# backend/models/transaction_model.js
@@ -9,15 +9,15 @@ const transaction={
     },
     create:function(transaction, callback){
         return db.query(
-            'INSERT INTO transaction (idaccount, amount, transaction_type, timestamp) VALUES (?,?,?,?)',
-            [transaction.idaccount, transaction.amount, transaction.transaction_type, transaction.timestamp],
+            'INSERT INTO transaction (idaccount, amount, date, description) VALUES (?,?,?,?)',
+            [transaction.idaccount, transaction.amount, transaction.date, transaction.description],
             callback
         );
     },
     update:function(transaction, idtransaction, callback){
         return db.query(
-            'UPDATE transaction SET idaccount=IFNULL(?, idaccount), amount=IFNULL(?, amount), transaction_type=IFNULL(?, transaction_type), timestamp=IFNULL(?, timestamp) WHERE idtransaction=?',
-            [transaction.idaccount, transaction.amount, transaction.transaction_type, transaction.timestamp, idtransaction],
+            'UPDATE transaction SET idaccount=IFNULL(?, idaccount), amount=IFNULL(?, amount), date=IFNULL(?, date), description=IFNULL(?, description) WHERE idtransaction=?',
+            [transaction.idaccount, transaction.amount, transaction.date, transaction.description, idtransaction],
             callback
         );
     },
